<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Issue_reporting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/home_bg_a_1"
        android:orientation="vertical">

        <include
            android:id="@+id/include"

            layout="@layout/toolbar_compaint" />
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/home_bg_a_1"
                android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/muncipla"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight=".5sp"
                android:layout_weight="1"
                android:background="@color/backbutton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/municipal_contacts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/muncipal"

                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/contact"

                    android:textColor="@color/textlatest" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/informations"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_marginLeft=".5sp"
                android:layout_weight="1"
                android:background="@color/backbutton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/information_for_businesses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/information"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/forbusiness"
                    android:textColor="@color/textlatest"

                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"

            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"

            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/publicservice"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_marginRight=".5sp"
                android:layout_weight="1"
                android:background="@color/backbutton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/ImageView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/public_services" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/publics"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/services"
                    android:textColor="@color/textlatest"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/development"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft=".5sp"
                android:layout_weight="1"
                android:background="@color/backbutton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/development_plans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/development"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/plans"
                    android:textColor="@color/textlatest" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"

            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"

            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/organization"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_marginRight=".5sp"
                android:layout_weight="1"
                android:background="@color/backbutton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/ImageView01s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/organizational_chart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/organ"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/chart"
                    android:textColor="@color/textlatest" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rules"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft=".5sp"
                android:layout_weight="1"

                android:background="@color/backbutton"

                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rules_and_regulations"
                 />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rulesand"
                    android:textColor="@color/white"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regulation"

                    android:textColor="@color/textlatest"
                 />
            </LinearLayout>

        </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"

                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"

                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/turist"
                        android:layout_width="0dp"

                        android:layout_height="match_parent"
                        android:layout_marginRight=".5sp"
                        android:layout_weight="1"
                        android:background="@color/backbutton"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView

                            android:id="@+id/ImageView01ss"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/organizational_chart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/touristic"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/historic"
                            android:textColor="@color/textlatest" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/informationsss"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft=".5sp"
                        android:layout_weight="1"
                        android:visibility="visible"

                        android:background="@color/backbutton"

                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5ss"
                            android:layout_width="wrap_content"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/rules_and_regulations"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:visibility="gone"
                            android:text="@string/rulesand"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/regulation"
                            android:visibility="gone"

                            android:textColor="@color/textlatest"
                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>